# learn-langchain

./: .env.example  .gitignore  01_deepagents_quickstart.md  01_quickstart.py  02_deepagents_customization.md  11_deepagents_memory.md  12_deepagents_skills.md  13_deepagents_sandboxes.md  README.md  pyproject.toml  tools.py
.claude/: settings.json
ai-agent-project-tutorial/: 00_rl_agent_long_term_memory_retrieval.md  00_rl_agent_long_term_memory_retrieval.py  00_rl_agent_long_term_memory_retrieval_vi.md  README.md  config.yaml  pyproject.toml  requirements.txt
ai-agent-project-tutorial/docs/plans/: task.md
ai-agent-project-tutorial/docs/superpowers/plans/: 2026-04-28-rl-memory-retrieval.md
ai-agent-project-tutorial/docs/superpowers/specs/: 2026-04-28-rl-memory-retrieval-design.md
ai-agent-project-tutorial/rl_memory_retrieval/: __init__.py  cli.py  config.py  models.py  pipeline.py
ai-agent-project-tutorial/rl_memory_retrieval/embeddings/: __init__.py  base.py  local_embedder.py  openai_embedder.py
ai-agent-project-tutorial/rl_memory_retrieval/ingestion/: __init__.py  chunker.py  extractor.py  loader.py
ai-agent-project-tutorial/rl_memory_retrieval/retrieval/: __init__.py  evaluator.py  retriever.py
ai-agent-project-tutorial/rl_memory_retrieval/training/: __init__.py  environment.py  features.py  query_gen.py  trainer.py
ai-agent-project-tutorial/tests/: test_chunker.py  test_config.py  test_environment.py  test_features.py  test_integration.py  test_query_gen.py  test_retriever.py
coding-ml-agent/: AGENTS.md  README.md  deepagents.toml  main.py  (+1 more)
(+39 files in other folders)
