[project]
name = "learn-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-sandbox>=0.0.30",
    "deepagents>=0.5.3",
    "langchain-openai>=1.1.16",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tavily-python>=0.7.23",
]
